# hyrenet-flash

./: .gitignore  ARCHITECTURE.html  CONTRIBUTING.md  README.md  SECURITY.md  go.mod  go.sum
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  docs.yml
cmd/node-agent/: main.go
cmd/orchestrator/: apikeys.go  auth.go  config.go  config_test.go  main.go  middleware.go  observability.go  planner.go  planner_test.go  playground.go  preview.go  provision.go  registry.go  sandboxes.go  templates.go  terminal.go  windows.go
cmd/toolbox/: main.go
dashboard/: components.json  next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  (+1 more)
deploy/: Caddyfile  README.md
deploy/aws/: README.md  main.tf  outputs.tf  user-data-control.sh.tftpl  user-data-node.sh.tftpl  variables.tf
docs/: DEVELOPMENT.md  GETTING_STARTED.md  TEMPLATES.md
internal/cluster/: registry.go  registry_test.go
internal/dashboard/: dashboard.go
internal/docker/: client.go
internal/metrics/: metrics.go
internal/pool/: pool.go
internal/store/: store.go
internal/templates/: templates.go
scripts/: auth-check.sh  build-dashboard.sh  build-image.sh  cluster-check.sh  e2e.sh  hardening-check.sh  install-gvisor.sh  node-drain-check.sh  restart-survival.sh  setup.sh  window-check.sh
sdk/go/: README.md  apikeys.go  assessments.go  client.go  e2e_test.go  go.mod  godoc.json  introduction.md  sandbox.go  sourcey.config.ts  templates.go
sdk/python/: README.md  pyproject.toml
sdk/python/flash/: __init__.py  client.py
sdk/python/tests/: test_e2e.py
(+26 files in other folders)
