[project]
name = "flash-sandbox-sdk"
version = "0.1.0"
description = "Official Python SDK for the Flash sandbox engine — self-hosted sandboxes with warm-pool claims, exec, files, previews, and assessment scoring."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flash"]
